D'oh, upload-pages-artifact != upload-artifact.

--- a/.github/workflows/continuous_delivery.yaml
+++ b/.github/workflows/continuous_delivery.yaml
@@ -18,11 +18,10 @@ jobs:
       - name: 'Setup Pages'
         uses: actions/configure-pages@1f0c5cde4bc74cd7e1254d0cb4de8d49e9068c7d # v4.0.0
 
-      - name: 'Upload artifact'
+      - name: 'Upload Pages artifact'
         uses: actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa # v3.0.1
         with:
-          name: 'resume'
-          path: 'resume.pdf'
+          path: './'
 
       - name: 'Deploy to GitHub Pages'
         id: 'deployment'
