Fix some permissions stuff.

--- a/.github/workflows/continuous_delivery.yaml
+++ b/.github/workflows/continuous_delivery.yaml
@@ -9,6 +9,10 @@ permissions:
   pages: write
   id-token: write
 
+concurrency:
+  group: 'continuous_deployment'
+  cancel-in-progress: true
+
 jobs:
   continuous-deployment:
     runs-on: 'ubuntu-latest'
